--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- top games & other interesting stats -->
     <h2>Stats</h2>
     <div class="stats-container">
+        <div class="flexbox">
+        </div>
         <div class="stats-card">
             <h3>Individual Contributions</h3>
             <p id="num-contributions">
